<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- Dependencies for a C++ package -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend> <!-- Specific dependency for action servers/clients in C++ -->

  <!-- Dependencies for action messages -->
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- Build tool dependencies for message generation -->
  <build_depend>rosidl_default_generators</build_depend>
   
  <export>
    <build_type>ament_cmake</build_type>
   
  </export>
</package>

